# detect_sleep_states

./: .gitignore  Makefile  README.md  pyproject.toml  run.sh
scripts/: check_cv.py  cv.py  full_train_v3.py  make_corrected_events.py  make_fold.py  make_periodic_dict.py  make_seq_chunks.py  make_series_weights.py  prepare_data.py  train.py  train_v2.py  train_v3.py
scripts/eda/: eda001.py  eda002.py  eda003.py  eda004.py  eda005.py  eda006.py  eda007.py  eda008.py  eda009.py  eda010.py  eda011.py  eda012.py
src/: augmentations.py  dataset-metadata.json  dataset.py  decoders.py  detr2d.py  encoders.py  fe.py  feature_extractors.py  losses.py  metrics.py  models.py  run.py  tools.py  utils.py
src/configs/: exp000.py  exp001.py  exp002.py  exp003.py  exp004.py  exp005.py  exp006.py  exp007.py  exp008.py  exp009.py  exp010.py  exp011.py  exp012.py  exp013.py  exp014.py  exp015.py  exp016.py  exp017.py  exp018.py  exp019.py  exp020.py  exp021.py  exp022.py  exp023.py  exp024.py  exp025.py  exp026.py  exp027.py  exp028.py  exp029.py  exp030.py  exp031.py  exp032.py  exp033.py  exp034.py  exp035.py  exp036.py  exp037.py  exp037_1.py  exp038.py  (+77 more)
