[project]
name = "detect-sleep-states"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "daikichiba9511", email = "daikichiba.tech.ml@gmail.com" }
]
dependencies = [
    "numpy~=1.24.3",
    "pandas~=2.0.2",
    "matplotlib~=3.7.1",
    "seaborn~=0.12.2",
    "transformers>=4.31.0",
    "torchvision~=0.15.2",
    "scikit-learn>=1.2.2",
    "torch==2.0.1+cu118",
    "ttach>=0.0.3",
    "pyarrow>=13.0.0",
    "zarr>=2.16.1",
    "polars>=0.19.8",
    "timm>=0.9.7",
    "tabulate>=0.9.0",
    # -- For Vision
    # "segmentation-models-pytorch~=0.3.3",
    # "monai>=1.2.0",
    # "albumentations>=1.3.1",
    # "opencv-python>=4.8.0.74",
    # "pydicom>=2.4.3",
    # "nibabel>=5.1.0",
]
readme = "README.md"
requires-python = ">= 3.10"

[[tool.rye.sources]]
name = "torch"
url = "https://download.pytorch.org/whl/cu118"
type = "index"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ruff>=0.1.0",
    "kaggle>=1.5.16",
    "ipython~=8.14.0",
    "jupyterlab~=4.0.2",
    "black~=23.3.0",
    "isort~=5.12.0",
    "wandb~=0.15.4",
    "typer[all]~=0.9.0",
    "mypy>=1.4.1",
    "ipykernel>=6.25.2",
    "pyproject-flake8>=6.0.0.post1",
    "flake8-bugbear>=23.9.16",
    "plotly>=5.17.0",
    "memray>=1.10.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
py_version = 310
line_length = 88
profile = "black"

[tool.flake8]
max-line-length = 88
extend-ignore = [
    "E203",
    "E266",
    "E501",
    "W503",
    "B905",
    "B907"
]
exclude = "git,.venv,__pycache__,.github,.mypy_cache,.vscode,.pytest_cache,notebooks,.ipynb_checkpoints"

[tool.mypy]
python_version = 3.10
ignore_missing_imports = true
disallow_untyped_defs = true
allow_redefinition = true
warn_redundant_casts = true
show_error_context = true
incremental = false
no_implicit_optional = true
warn_unreachable = true
show_error_codes = true
pretty = true
disallow_incomplete_defs = true
warn_no_return = true
plugins = "numpy.typing.mypy_plugin"

# [tool.pyright]
# diagnosticMode = "openFilesOnly"
# autoImportCompletions = false
# autoSearchPaths = true
# useLibraryCodeForTypes = true
# completeFunctionParens = true
